made changes to fix overflow issues

--- a/src/components/SkinCard.css
+++ b/src/components/SkinCard.css
@@ -15,6 +15,7 @@
 
 .products--card-image-holder {
     background: url(../resources/skin-background.webp);
+    overflow: hidden;
 }
 
 .products--card-image-holder + hr {
